Members fix pageaction image getAllMember list ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,12 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.format_sql=true
 
 spring.thymeleaf.cache=false
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
