Members index smart phone carousel version  ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,6 @@ spring.jackson.time-zone=GMT+8
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+server.address=0.0.0.0
 #server.port=8083
